--- a/TeX/paper/parts/soc_ext_tab__reg_fe_assrate_robustness.tex
+++ b/TeX/paper/parts/soc_ext_tab__reg_fe_assrate_robustness.tex
@@ -1,5 +1,5 @@
-\begin{table}[H] \centering 
-	\begin{threeparttable} \centering \caption{Robustness tests: Impact on \textbf{Assault rate}}\label{tab_soc_ext:reg_fe_assrate_robustness}
+\begin{table}[t] \centering 
+	\begin{threeparttable} \centering \caption{Robustness tests: Impact on assault rate}\label{tab_soc_ext:reg_fe_assrate_robustness}
 		{\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi} 
 			\begin{tabular}{l*{4}{c}}
 				\toprule 
