--- a/TeX/paper/parts/soc_ext_tab__reg_fe_assrate.tex
+++ b/TeX/paper/parts/soc_ext_tab__reg_fe_assrate.tex
@@ -1,5 +1,5 @@
 \begin{table}[ht] \centering 
-	\begin{threeparttable} \centering \caption{Effects on \textbf{Assault rate}}\label{tab_soc_ext:reg_fe_assrate}
+	\begin{threeparttable} \centering \caption{Effects on assault rate}\label{tab_soc_ext:reg_fe_assrate}
 		{\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi} 
 			\begin{tabular}{l*{6}{c}}
 				\toprule 
