--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_displacement.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_displacement.tex
@@ -3,14 +3,14 @@
 %	1) assrate_neighbor_regions_fixed_effects
 %	2) assrate_fixed_effects_leads_lags
 \\
-\textit{\underline{Panel A: Spatial displacement}} \\
+\textit{\textbf{Panel A: Spatial displacement}}\\
 Game day            &       0.144         &       0.153         &       0.170         &       0.210         \\
                     &     (0.146)         &     (0.146)         &     (0.147)         &     (0.154)         \\
 Effect size [\%]&        2.58         &        2.74         &        3.04         &        3.75         \\
 Observations        &     960,848         &     960,848         &     960,848         &     960,848         \\
 
 \\\\
-\textit{\underline{Panel B: Temporal displacement}}\\
+\textit{\textbf{Panel B: Temporal displacement}}\\
 Game day            &       2.777\sym{***}&       2.810\sym{***}&       2.857\sym{***}&       2.770\sym{***}\\
                     &     (0.346)         &     (0.338)         &     (0.336)         &     (0.300)         \\
 Day after game      &      -0.105         &      -0.076         &      -0.065         &       0.279         \\
@@ -19,9 +19,9 @@ Day before game     &       0.287         &       0.318         &       0.339   
                     &     (0.241)         &     (0.238)         &     (0.229)         &     (0.206)         \\
 Effect size [\%]&       22.34         &       22.60         &       22.98         &       22.28         \\
 Observations        &      87,438         &      87,438         &      87,438         &      87,438         \\
-\\\\
-Region FE           &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
-Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
-Weather Controls    &           -         &         \checkmark         &         \checkmark         &         \checkmark         \\
-Holiday FE          &           -         &           -         &         \checkmark         &         \checkmark         \\
-Interact FE         &           -         &           -         &           -         &         \checkmark         \\
+ \\\\
+ Region FE           &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+ Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+ Weather Controls    &           -         &         \checkmark         &         \checkmark         &         \checkmark         \\
+ Holiday FE          &           -         &           -         &         \checkmark         &         \checkmark         \\
+ Interact FE         &           -         &           -         &           -         &         \checkmark         \\
