--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_prominent_games.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_prominent_games.tex
@@ -2,8 +2,8 @@ Game day            &       8.320\sym{***}&       2.387\sym{***}&       3.530\sy
                     &     (1.746)         &     (0.275)         &     (0.460)         &     (0.318)         &     (0.350)         \\
 \midrule Effect size [\%]&       66.81         &       19.17         &       28.35         &       15.08         &       12.60         \\
 Observations        &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         \\
-Region FE           &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
-Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
-Weather Controls    &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
-Holiday FE          &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
-Interact FE         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+%Region FE           &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+%Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+%Weather Controls    &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+%Holiday FE          &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+%Interact FE         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
