adjust FIGURE layout: place in text

--- a/TeX/paper/parts/soc_ext_fig__fe_age_profile.tex
+++ b/TeX/paper/parts/soc_ext_fig__fe_age_profile.tex
@@ -1,4 +1,4 @@
-\begin{figure}[H]\centering
+\begin{figure}[t]\centering
 	\caption{The age profile of the impact of soccer matches on the assault rate}\label{fig_soc_ext:fe_age_profile}
 	% \begin{subfigure}[h]{0.31\linewidth}\centering\caption{Total}
 	% 	\includegraphics[width=\linewidth]{regression/fe_agebrackets_t.pdf}
