--- a/TeX/paper/parts/soc_ext_fig__map_gem_stadiums_monitor_and_neighboring_regions.tex
+++ b/TeX/paper/parts/soc_ext_fig__map_gem_stadiums_monitor_and_neighboring_regions.tex
@@ -1,13 +1,13 @@
 \newgeometry{left=1cm,right=1cm,top=3cm,bottom=3cm} 
 \begin{landscape}
 	\vspace*{\fill}
-	\begin{figure}[H]\centering
+	\begin{figure}[ht]\centering
 		\caption{The stadiums and the closest weather monitors and neighboring regions}\label{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}
 
-		\begin{subfigure}[h]{0.47\linewidth}\centering\caption{The closest weather monitors}
+		\begin{subfigure}[h]{0.4\linewidth}\centering\caption{The closest weather monitors}
 			\includegraphics[width=\linewidth]{maps/soc_ext_2010_2015_Gemeinde_stadiums_nearest_monitor_100.png}
 		\end{subfigure}
-		\begin{subfigure}[h]{0.47\linewidth}\centering\caption{Spatial displacement - neighboring regions}
+		\begin{subfigure}[h]{0.4\linewidth}\centering\caption{Spatial displacement - neighboring regions}
 			\includegraphics[width=\linewidth]{maps/soc_ext_2010_2015_map_stadiums_neighbor_regions_zoom_100.png}
 		\end{subfigure}
 		\scriptsize
