--- a/TeX/paper/parts/soc_ext_fig__robustness_placebo_games.tex
+++ b/TeX/paper/parts/soc_ext_fig__robustness_placebo_games.tex
@@ -1,4 +1,4 @@
-\begin{figure}[H]\centering
+\begin{figure}[t]\centering
 	\caption{The effect of placebo games}\label{fig_soc_ext:robustness_placebo_games}
 	\includegraphics[width=0.9 \linewidth]{regression/robustness_placebo_games.pdf}
 	\begin{minipage}{0.95\linewidth}
