--- a/TeX/paper/parts/soc_ext_fig__descriptives_matches_time_attendance.tex
+++ b/TeX/paper/parts/soc_ext_fig__descriptives_matches_time_attendance.tex
@@ -1,4 +1,4 @@
-\begin{figure}[H]\centering
+\begin{figure}[!t]\centering
 	\caption{Soccer matches}\label{fig_soc_ext:descriptives_matches_time_attendance}
 	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ect_desc_soccer_macthes_attendance.pdf}	
 	\begin{minipage}{\linewidth}
