--- a/TeX/paper/soc_ext_paper_main.tex
+++ b/TeX/paper/soc_ext_paper_main.tex
@@ -177,7 +177,8 @@ labelfont={bf}
 
 
 
-
+% have long table still on one page in the text
+\renewcommand{\topfraction}{0.8}
 
 
 %--------------------------------------------------------------------
