replace soccer with football

--- a/TeX/paper/parts/soc_ext_appendix_figures.tex
+++ b/TeX/paper/parts/soc_ext_appendix_figures.tex
@@ -84,7 +84,7 @@
 	\includegraphics[width=\linewidth]{descriptive/soc_ext_descr_assaults_gd_nongd_hor.pdf}
 	\scriptsize
 	\begin{minipage}{\linewidth}
-		\emph{Notes:} The figure shows the daily average number of assaults for regions that host games of a soccer team from the first three leagues of the German football league system. The daily rates are shown for weeks in which a game is played and for weeks in which no game takes place.
+		\emph{Notes:} The figure shows the daily average number of assaults for regions that host games of a football team from the first three leagues of the German football league system. The daily rates are shown for weeks in which a game is played and for weeks in which no game takes place.
 	\end{minipage}
 \end{figure}
 \vspace*{\fill}\clearpage
