--- a/TeX/paper/parts/soc_ext_fig__fe_age_profile.tex
+++ b/TeX/paper/parts/soc_ext_fig__fe_age_profile.tex
@@ -1,5 +1,5 @@
 \begin{figure}[t]\centering
-	\caption{The age profile of the impact of soccer matches on the assault rate}\label{fig_soc_ext:fe_age_profile}
+	\caption{The age profile of the impact of football matches on the assault rate}\label{fig_soc_ext:fe_age_profile}
 	% \begin{subfigure}[h]{0.31\linewidth}\centering\caption{Total}
 	% 	\includegraphics[width=\linewidth]{regression/fe_agebrackets_t.pdf}
 	% \end{subfigure}
@@ -11,6 +11,6 @@
 	\end{subfigure}
 	\scriptsize
 	\begin{minipage}{\linewidth}
-		\emph{Notes:} The figure shows estimates and 95\% confidence intervals across age brackets and by gender. To estimate the effect, I used the model shown in equation \ref{eq_soc_ext:model} in its richest specification with all covariates and population weights. The outcome variable is defined as the number of assaults per million population.
+		\emph{Notes:} The figure shows estimates and 95\% confidence intervals across age brackets and by gender. To estimate the effect, I use the model shown in equation \ref{eq_soc_ext:model} in its richest specification with all covariates and population weights. The outcome variable is defined as the number of assaults per million population.
 	\end{minipage}
 \end{figure}
