--- a/TeX/paper/soc_ext_paper_main.tex
+++ b/TeX/paper/soc_ext_paper_main.tex
@@ -161,7 +161,7 @@ labelfont={bf}
 %--------------------------------------------------------------------
 %	AUTHOR & TITLE
 %--------------------------------------------------------------------
-\title{Crime Externalities from Soccer Games in Germany\footnote{I am very grateful to Helmut Rainer for valuable comments and discussions. Furthermore, I thank conference participants at the ifo Institute. The author gratefully acknowledges financial support from the Leibniz association. Dominik Ammon provided excellent research assistance. All errors and omissions are my own.
+\title{Crime Externalities from Football Games in Germany\footnote{I am very grateful to Helmut Rainer for valuable comments and discussions. Furthermore, I thank conference participants at the ifo Institute. The author gratefully acknowledges financial support from the Leibniz association. Dominik Ammon provided excellent research assistance. All errors and omissions are my own.
 }}
 \author{
 	Marc Fabel 
@@ -204,7 +204,7 @@ labelfont={bf}
 
 \renewcommand{\abstractname}{\vspace{-\baselineskip}} % GET RID OF ABSTRACT TITLE
 \begin{abstract}\noindent 
-	\footnotesize{\begin{center}\textbf{Abstract}\end{center} This paper investigates the impact of football games on the rate of physical assaults. I exploit time series and cross-sectional variation in crime registers, which contain detailed information on all victims from 2011-2015. I find that a home game leads to an increase of the assault rate by 21.5\%. The effects are largely driven by male victims, who do not know the perpetrator. The effect size is decreasing with age.	\\\newline \textbf{Keywords:} soccer games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
+	\footnotesize{\begin{center}\textbf{Abstract}\end{center} This paper investigates the impact of professional football games on the rate of physical assaults in Germany. I exploit time series and cross-sectional variation in crime registers, which contain detailed information on all victims from 2011-2015. I find that a home game leads to an increase of the assault rate by 21.5 percent. The effects are largely driven by male victims, who do not know the perpetrator. The effect size is decreasing with age. In total, professional football games explain almost 18 percent of the assault reports and generate annual social costs of 95 million euros.	\\\newline \textbf{Keywords:} football games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
 
 \end{abstract}
 
@@ -369,7 +369,7 @@ labelfont={bf}
 %				\bottomrule 
 %		\end{tabular}}
 %		\begin{tablenotes} 
-%			\item \scriptsize \emph{Notes:} Estimates are based on the model shown in equation \ref{eq_soc_ext:model}. The specifications use daily data (excluding June) spanning the time window 2011-2015 for regions that share a common boundary with a distract that contains a stadium of a soccer team from the first three leagues of the German football league system. The outcome variable is defined as the number of assaults per million population. Population-weighted coefficients show the change in the outcome variable due to a home game. Days are defined to run from 6:00 AM until 5:59 AM the following day to accommodate the fact that offenses committed in the early hours have their origin in the preceding day. The effect size corresponds to the percent change of the assault rate due to a soccer game in relation to the mean when no game takes place. Control variables shown as \textit{Date FE} include dummies for day-of-week, month, and year. \textit{Weather controls} include air temperature (average, maximum, and minimum), minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, sun shine duration, snow depth and wind velocity. \textit{Holiday FE} is a dummy variable for public and school holidays, as well as for other peculiar days. Control variables shown as \textit{Interact FE} consist of interactions of region dummies with all elements of the date fixed effects. Two-way clustered standard errors at region-year and year-month level are reported in parentheses. \newline Significance levels: * p < 0.10, ** p < 0.05, *** p < 0.01.
+%			\item \scriptsize \emph{Notes:} Estimates are based on the model shown in equation \ref{eq_soc_ext:model}. The specifications use daily data (excluding June) spanning the time window 2011-2015 for regions that share a common boundary with a distract that contains a stadium of a football team from the first three leagues of the German football league system. The outcome variable is defined as the number of assaults per million population. Population-weighted coefficients show the change in the outcome variable due to a home game. Days are defined to run from 6:00 AM until 5:59 AM the following day to accommodate the fact that offenses committed in the early hours have their origin in the preceding day. The effect size corresponds to the percent change of the assault rate due to a football game in relation to the mean when no game takes place. Control variables shown as \textit{Date FE} include dummies for day-of-week, month, and year. \textit{Weather controls} include air temperature (average, maximum, and minimum), minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, sun shine duration, snow depth and wind velocity. \textit{Holiday FE} is a dummy variable for public and school holidays, as well as for other peculiar days. Control variables shown as \textit{Interact FE} consist of interactions of region dummies with all elements of the date fixed effects. Two-way clustered standard errors at region-year and year-month level are reported in parentheses. \newline Significance levels: * p < 0.10, ** p < 0.05, *** p < 0.01.
 %		\end{tablenotes} 
 %	\end{threeparttable} 
 %\end{table}
@@ -389,7 +389,7 @@ labelfont={bf}
 %				\bottomrule 
 %		\end{tabular}}
 %		\begin{tablenotes} 
-%			\item \scriptsize \emph{Notes:} Estimates are based on the model shown in equation \ref{eq_soc_ext:model}. The specifications use daily data (excluding June) spanning the time window 2011-2015 for regions that host games of a soccer team from the first three leagues of the German football league system. The outcome variable is defined as the number of assaults per million population. Population-weighted coefficients show the change in the outcome variable due to a home game. Days are defined to run from 6:00 AM until 5:59 AM the following day to accommodate the fact that offenses committed in the early hours have their origin in the preceding day. The effect size corresponds to the percent change of the assault rate due to a soccer game in relation to the mean when no game takes place. Control variables shown as \textit{Date FE} include dummies for day-of-week, month, and year. \textit{Weather controls} include air temperature (average, maximum, and minimum), minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, sun shine duration, snow depth and wind velocity. \textit{Holiday FE} is a dummy variable for public and school holidays, as well as for other peculiar days. Control variables shown as \textit{Interact FE} consist of interactions of region dummies with all elements of the date fixed effects. Two-way clustered standard errors at region-year and year-month level are reported in parentheses. \newline Significance levels: * p < 0.10, ** p < 0.05, *** p < 0.01.
+%			\item \scriptsize \emph{Notes:} Estimates are based on the model shown in equation \ref{eq_soc_ext:model}. The specifications use daily data (excluding June) spanning the time window 2011-2015 for regions that host games of a football team from the first three leagues of the German football league system. The outcome variable is defined as the number of assaults per million population. Population-weighted coefficients show the change in the outcome variable due to a home game. Days are defined to run from 6:00 AM until 5:59 AM the following day to accommodate the fact that offenses committed in the early hours have their origin in the preceding day. The effect size corresponds to the percent change of the assault rate due to a football game in relation to the mean when no game takes place. Control variables shown as \textit{Date FE} include dummies for day-of-week, month, and year. \textit{Weather controls} include air temperature (average, maximum, and minimum), minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, sun shine duration, snow depth and wind velocity. \textit{Holiday FE} is a dummy variable for public and school holidays, as well as for other peculiar days. Control variables shown as \textit{Interact FE} consist of interactions of region dummies with all elements of the date fixed effects. Two-way clustered standard errors at region-year and year-month level are reported in parentheses. \newline Significance levels: * p < 0.10, ** p < 0.05, *** p < 0.01.
 %		\end{tablenotes} 
 %	\end{threeparttable} 
 %\end{table}
