--- a/TeX/paper/parts/soc_ext_appendix_figures.tex
+++ b/TeX/paper/parts/soc_ext_appendix_figures.tex
@@ -10,7 +10,7 @@
 	\caption{The types of criminal offenses}\label{fig_soc_ext:offense_types_distribution_2014}
 	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_offense_key_distribution_2014.pdf}
 	\begin{minipage}{0.95\linewidth}
-		\scriptsize{\emph{Notes:} The figure depicts the frequency distribution of the most common criminal offenses in the Federal Republic of Germany in 2014. The most common offense type is intentional simple bodily injury (224000), followed by threats (232300), and two forms of dangerous and serious bodily injury (222110 \& 222010). These four offense types together comprise around 75\% of all criminal offenses. \newline \emph{Source:} Own representation with data from the Federal Criminal Police Office.}
+		\scriptsize{\emph{Notes:} The figure depicts the frequency distribution of the most common criminal offenses in the Federal Republic of Germany in 2014. The most common offense type is intentional simple bodily injury (224000), followed by threats (232300), and two forms of dangerous and serious bodily injury (222110 \& 222010). These four offense types together comprise around 75\% of all criminal offenses.}
 	\end{minipage}
 \end{figure}
 \vspace*{\fill}\clearpage
@@ -35,7 +35,7 @@
 		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2015.pdf}
 	\end{subfigure}
 	\begin{minipage}{\linewidth}
-		\scriptsize{\emph{Notes:} The figure shows the relative frequency of assaults per day between 2011 and 2015 in the Federal Republic of Germany.\newline \emph{Source:} Own representation with data from the Federal Criminal Police Office}
+		\scriptsize{\emph{Notes:} The figure shows the relative frequency of assaults per day between 2011 and 2015 in the Federal Republic of Germany.}
 	\end{minipage}
 \end{figure}
 \vspace*{\fill}\clearpage
