--- a/TeX/paper/parts/soc_ext_fig__assault_time_distribution_2014.tex
+++ b/TeX/paper/parts/soc_ext_fig__assault_time_distribution_2014.tex
@@ -5,7 +5,7 @@
 	\includegraphics[width=\linewidth]{descriptive/soc_ect_desc_crime_ass_time.pdf}
 
 	\begin{minipage}{\linewidth}
-		\scriptsize{\emph{Notes:} The figure shows the distribution of assaults across the course of a day, days of the week, across months (adjusted for the number of days per month), and across the days of the year in the Federal Republic of Germany.\newline \emph{Source:} Own representation with data from the Federal Criminal Police Office.\newline \hspace{1 em} $^1$ The figures in panel C and D are solely based on the year 2014. Please consult the appendix for figures from the other years.}
+		\scriptsize{\emph{Notes:} The figure shows the distribution of assaults across the course of a day, days of the week, across months (adjusted for the number of days per month), and across the days of the year in the Federal Republic of Germany.\newline 	\hspace*{15 pt}$^1$: The figures in panel C and D are solely based on the year 2014. Please consult the appendix for figures from the other years.}
 	\end{minipage}
 \end{figure}
 
