--- a/TeX/paper/parts/soc_ext_fig__descriptives_matches_time_attendance.tex
+++ b/TeX/paper/parts/soc_ext_fig__descriptives_matches_time_attendance.tex
@@ -2,6 +2,6 @@
 	\caption{Football matches}\label{fig_soc_ext:descriptives_matches_time_attendance}
 	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ect_desc_soccer_macthes_attendance.pdf}	
 	\begin{minipage}{\linewidth}
-		\scriptsize{\emph{Notes:} The figures show key aspects of football games in the data set. Panel A shows how the number of matches vary over the course of a week, Panel B plots the distribution of matches over the course of a day, and Panel C shows kernel densities for the number of spectators (in thousand) across the three leagues.\newline \emph{Source:} Own representation with data obtained from kicker.de.}
+		\scriptsize{\emph{Notes:} The figures show key aspects of football games in the data set. Panel A shows how the number of matches vary over the course of a week, Panel B plots the distribution of matches over the course of a day, and Panel C shows kernel densities for the number of spectators (in thousand) across the three leagues.}
 	\end{minipage}
 \end{figure}
