--- a/TeX/paper/soc_ext_paper_main.tex
+++ b/TeX/paper/soc_ext_paper_main.tex
@@ -204,7 +204,8 @@ labelfont={bf}
 
 \renewcommand{\abstractname}{\vspace{-\baselineskip}} % GET RID OF ABSTRACT TITLE
 \begin{abstract}\noindent 
-	\footnotesize{\begin{center}\textbf{Abstract}\end{center} This paper investigates the impact of professional football games on the rate of physical assaults in Germany. I exploit time series and cross-sectional variation in crime registers, which contain detailed information on all victims from 2011-2015. I find that a home game leads to an increase of the assault rate by 21.5 percent. The effects are largely driven by male victims, who do not know the perpetrator. The effect size is decreasing with age. In total, professional football games explain almost 18 percent of the assault reports and generate annual social costs of 95 million euros.	\\\newline \textbf{Keywords:} football games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
+	\footnotesize{\begin{center}\textbf{Abstract}\end{center} 
+		This paper investigates the impact of professional football games on physical violence in Germany. I employ a generalized difference-in-differences strategy that exploits time-series and cross-sectional variation in crime register data for the period 2011-2015. I compare the level of assaults on days with and without matches while controlling for date heterogeneity, weather, and holidays. I find that a home game leads to an increase of the assault rate by 21.5 percent. The effects are largely driven by male victims, who do not know the perpetrator, and are decreasing with age. In total, professional football games explain almost 18 percent of all assault reports and generate annual social costs of 95 million euros.	\\\newline \textbf{Keywords:} football games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
 
 \end{abstract}
 
