minor changes in captions of figs & tabs

--- a/TeX/paper/parts/soc_ext_appendix_tables.tex
+++ b/TeX/paper/parts/soc_ext_appendix_tables.tex
@@ -25,7 +25,7 @@
 % Channels: Derbies and prominent games
 \vspace*{\fill}
 \begin{table}[H]\centering
-	\begin{threeparttable}\centering \caption{Prominent games}\label{tab_soc_ext:prominent_games_derbies}
+	\begin{threeparttable}\centering \caption{High-rivalry matches}\label{tab_soc_ext:prominent_games_derbies}
 		\begin{tabular}{lllc}
 			\toprule
 			\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}\\
