--- a/TeX/paper/parts/soc_ext_fig__map_gem_stadiums_monitor_and_neighboring_regions.tex
+++ b/TeX/paper/parts/soc_ext_fig__map_gem_stadiums_monitor_and_neighboring_regions.tex
@@ -2,7 +2,7 @@
 \begin{landscape}
 	\vspace*{\fill}
 	\begin{figure}[ht]\centering
-		\caption{The stadiums and the closest weather monitors and neighboring regions}\label{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}
+		\caption{The stadiums with the closest weather monitors and neighboring regions}\label{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}
 
 		\begin{subfigure}[h]{0.4\linewidth}\centering\caption{The closest weather monitors}
 			\includegraphics[width=\linewidth]{maps/soc_ext_2010_2015_Gemeinde_stadiums_nearest_monitor_100.png}
