--- a/TeX/paper/parts/soc_ext_tab__reg_fe_assrate_emotional_cues.tex
+++ b/TeX/paper/parts/soc_ext_tab__reg_fe_assrate_emotional_cues.tex
@@ -7,7 +7,7 @@
 				\midrule \\
 				&&\multicolumn{2}{c}{Card \& Dahl (2011) specification}\\
 				\cmidrule(lr){3-4}
-				&\clb{c}{Upset\\event index} & \clb{c}{predicted\\outcomes}& \clb{c}{predicted\\and actual\\outcomes}\\
+				&\clb{c}{Upset\\event index} & \clb{c}{Predicted\\outcomes}& \clb{c}{Predicted\\and actual\\outcomes}\\
 				\midrule
 				\input{reg_fe/assrate_fixed_effects_emotional_cues} 
 				\bottomrule 
