--- a/TeX/paper/parts/soc_ext_tab__reg_fe_assrate_home_away.tex
+++ b/TeX/paper/parts/soc_ext_tab__reg_fe_assrate_home_away.tex
@@ -5,7 +5,7 @@
 				\toprule 
 				&\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}\\
 				\midrule
-				&\clb{c}{baseline\\w/o L3} & \clb{c}{distinction\\home/away$^1$}\\
+				&\clb{c}{Baseline\\w/o L3} & \clb{c}{Distinction\\home/away$^1$}\\
 				\midrule
 				\input{reg_fe/assrate_fixed_effects_home_away} 
 				\bottomrule 
