--- a/TeX/paper/parts/soc_ext_tab__reg_fe_asrate_victim_crime_chars.tex
+++ b/TeX/paper/parts/soc_ext_tab__reg_fe_asrate_victim_crime_chars.tex
@@ -23,9 +23,9 @@
 				
 				\\\\\\
 				\multicolumn{6}{l}{\textit{\textbf{Panel B: Crime characteristics}}} \\\\
-				& \multicolumn{4}{c}{Timing$^c$} & \multicolumn{2}{c}{assault execution} \\
+				& \multicolumn{4}{c}{Timing$^c$} & \multicolumn{2}{c}{Assault execution} \\
 				\cmidrule(lr){2-5} \cmidrule(lr){6-7}
-				& spring & summer & fall & winter & attempt & success \\
+				& spring & summer & fall & winter & attempt & completed act \\
 				\midrule
 				Game day            	 &     2.817\sym{***}&       1.482\sym{**} &       2.478\sym{***}&       2.849\sym{***}&       0.367\sym{***}&       2.310\sym{***}\\
 										 &   (0.404)         &     (0.484)         &     (0.372)         &     (0.535)         &     (0.060)         &     (0.238)         \\
