--- a/TeX/paper/parts/soc_ext_tab__reg_fe_assrate_robustness.tex
+++ b/TeX/paper/parts/soc_ext_tab__reg_fe_assrate_robustness.tex
@@ -4,7 +4,7 @@
 			\begin{tabular}{l*{4}{c}}
 				\toprule 
 				&\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}\\
-				& coefficient & \clb{c}{standard\\error} & \clb{c}{Effect\\ size [\%]} & $N$ \\
+				& Coefficient & \clb{c}{Standard\\error} & \clb{c}{Effect\\ size [\%]} & $N$ \\
 				\midrule
 				\input{reg_fe/assrate_fixed_effects_robustness} 
 				\bottomrule 
