minor: adjust thank you notes

--- a/TeX/paper/soc_ext_paper_main.tex
+++ b/TeX/paper/soc_ext_paper_main.tex
@@ -161,7 +161,7 @@ labelfont={bf}
 %--------------------------------------------------------------------
 %	AUTHOR & TITLE
 %--------------------------------------------------------------------
-\title{Crime Externalities from Football Games in Germany\footnote{I am very grateful to Helmut Rainer for valuable comments and discussions. Furthermore, I thank conference participants at the ifo Institute. The author gratefully acknowledges financial support from the Leibniz association. Dominik Ammon provided excellent research assistance. All errors and omissions are my own.
+\title{Crime Externalities from Football Games in Germany\footnote{I am very grateful to Victoria Endl-Geyer and Helmut Rainer for valuable comments and discussions. Furthermore, I thank conference participants at the ifo Institute. The author gratefully acknowledges financial support from the Leibniz association. Dominik Ammon provided excellent research assistance. All errors and omissions are my own.
 }}
 \author{
 	Marc Fabel 
