minor: change numbering of caption

--- a/TeX/paper/parts/soc_ext_appendix_figures.tex
+++ b/TeX/paper/parts/soc_ext_appendix_figures.tex
@@ -1,5 +1,5 @@
 
-\renewcommand\thefigure{A\arabic{figure}}
+\renewcommand\thefigure{A.\arabic{figure}}
 \setcounter{figure}{0} 
 \captionsetup[subfigure]{labelformat=parens}
 
