--- a/TeX/paper/parts/soc_ext_appendix_tables.tex
+++ b/TeX/paper/parts/soc_ext_appendix_tables.tex
@@ -1,4 +1,4 @@
-\renewcommand\thetable{A\arabic{table}}
+\renewcommand\thetable{A.\arabic{table}}
 \setcounter{table}{0} 
 
 %--------------------------------------------
