source: data public holidays

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -129,7 +129,7 @@ The weather data comes from Germany's National Meteorological Service (\textit{D
 
 
 \subsection{Holidays}
-In order to capture any variation of the crime rate between ordinary and special days, I add controls for public and school holidays, which may differ on the state level.\footnote{The data for the school holiday comes from `The Standing Conference of the Ministers of Education and Cultural Affairs of the Länder in the Federal Republic of Germany' (\textit{Kultusminister Konferenz}).} Furthermore, I add a dummy variable for peculiar days (New Year's Eve and the days surrounding Carnival), which are not holidays, but certainly shift the crime rate anyways.
+In order to capture any variation of the crime rate between ordinary and special days, I add controls for public and school holidays, which may differ on the state level.\footnote{The data for the school holiday comes from `The Standing Conference of the Ministers of Education and Cultural Affairs of the Länder in the Federal Republic of Germany' (\textit{Kultusminister Konferenz}). Data on public holidays are collected from \href{https://www.schulferien.org/deutschland/feiertage/}{https://www.schulferien.org/deutschland/feiertage/}.} Furthermore, I add a dummy variable for peculiar days (New Year's Eve and the days surrounding Carnival), which are not holidays, but certainly shift the crime rate anyways.
 
 
 
