more info on matchplan from DFL

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -57,7 +57,7 @@ The remainder of the paper is structured as follows. The next section provides i
 
 % German Football League System
 \subsection{German Football League System}
-The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights `Bundesliga' and `2. Bundesliga' are organized by the DFL, the third division `3. Liga' is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams that play 17 home and away games in the course of one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the plausibly random variation in the timing of matches. The preparation of the match schedules for the `Bundesliga' and the `2. Bundesliga' takes into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} In addition to obvious restrictions such as the fact that neighboring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events (e.g. Oktoberfest) or match dates of international competitions (UEFA Champions League \& UEFA Europa League).
+The three full professional divisions of the German football league system are held under the jurisdiction of the German Football Association (DFB) and the German Football League (DFL). While the two top flights `Bundesliga' and `2. Bundesliga' are organized by the DFL, the third division `3. Liga' is run by the DFB itself. Teams can move through the levels of the league system by either promotion or relegation. The two top divisions consist of 18 teams that play 17 home and away games in one season. The third level contains 20 teams with 19 home and away games. The empirical approach of this paper exploits the plausibly random variation in the timing of matches. Since 2006, the preparation of the match schedules for the `Bundesliga' and the `2. Bundesliga' is carried out with a software that uses integer linear programming.\footnote{For details of how the match plans are made, please refer to \href{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}{https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp}} The software outlines the rough details such as the fixtures per matchday. The exact date and time, however, are determined in the course of the season. The late exact scheduling allows to take into account guidelines from local authorities, security bodies, the Central Sports Intelligence Unit (ZIS), international football associations (FIFA/UEFA), fans, clubs, and stadium operators. In addition to obvious restrictions such as the fact that neighboring clubs should play their home matches at a different time, the DFL has to consider public holidays, parallel major events, or match dates of international competitions.
 
 
 
